<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordScreen">

    <ImageButton
        android:id="@+id/buttonRecordAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_image_button"
        android:onClick="micPressed"
        android:scaleType="center"
        android:scaleX="3"
        android:scaleY="3"
        android:src="@drawable/ic_baseline_record_voice_over_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/recordingStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageButton
        android:id="@+id/buttonPlayAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="playPressed"
        android:scaleType="center"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/round_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

    <Button
        android:id="@+id/buttonRecordNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="recordAgain"
        android:textColor="@color/button_text_background"
        android:text="@string/record_new_audio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        android:background="@drawable/app_default_buttons"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/buttonSendAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uploadAudioToFirebase"
        android:text="@string/submit_audio"
        android:textColor="@color/button_text_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecordNew"
        app:layout_constraintVertical_bias="0.2"
        android:background="@drawable/app_default_buttons"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/buttonOpenDownloader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_downloader"
        android:onClick="openListScreen"
        android:textColor="@color/button_text_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSendAudio"
        app:layout_constraintVertical_bias="0.4"
        android:background="@drawable/app_default_buttons"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/gpSimulationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/receive_audio_textview"
        app:layout_constraintBottom_toTopOf="@+id/buttonOpenDownloader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSendAudio"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/orSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_separator"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>